# rio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  LICENSE.md  README.md  build  build.cmd  build.zig  notes.md  nt  report.sh  report.txt  run.bash  run.py  run.sh  test  test.cmd  test.zig  update_test_output
c/: README.md  ion.c  out_ion_linux.c  out_ion_win32.c  out_nio_linux.c  out_rio_linux.c  out_rio_win32.c  rio.c
cpp/: CMakeLists.txt  CppProperties.json  cc.hpp  dirs.hpp  generate.hpp  main.cpp  parse.hpp  parser.hpp  resolve.hpp  rio.hpp  session.hpp  std.hpp  sub.hpp  tokenize.hpp  tokenizer.hpp  tree.hpp  type.hpp  util.hpp
examples/: bin-test.rs  bin_test.rs  branch.rio  hi.rio  recurse.rio  struct.rio  wild.rio
ion/: ast.ion  ast_h.ion  common.ion  gen.ion  ion.ion  ion.rio  lex.ion  main.ion  os.ion  os_linux.ion  os_win32.ion  os_win32.rio  parse.ion  parse.rio  resolve.ion  targets.ion  type.ion  type.rio
nim/: core.rio  gen_wasm.nim  intern.nim  lex.nim  main.nim  norm.nim  parse.nim  run.nim  wasi.nim  wasm.nim
nio/: common.rio  gen.rio  index.rio  lex.rio
old/: CMakeLists.txt  README.md
old2/: README.md
other/: fib.wat
rio/: ast.rio  ast_h.rio  common.rio  dupe.rio  gen.rio  ion.rio  lex.rio  main.rio  os.rio  os_linux.rio  os_win32.rio  parse.rio  resolve.rio  rio.rio  targets.rio  type.rio
src/: common.cpp  common.h  core.rio  core.rs  dex.zig  engine.cpp  extract.cpp  extract.zig  genc.cpp  idx.zig  intern.zig  lex.c  lex.cpp  lex.rs  lex.zig  lib.rs  link.rs  main.c  main.cpp  main.h  main.rs  main.zig  node.h  norm.rs  norm.zig  parse.cpp  parse.rs  parse.zig  parser.rs  path.cpp  resolve.cpp  resolve.zig  rio.h  rio.pest  run.rs  sym.cpp  tests.rs  tokenizer.h  tokenizer.rs  transform.cpp  (+6 more)
test/: test.rio
tests/: boolerr.rio  cout_test1_linux.c  cout_test2_linux.c  exercise.rio  exercise.rio.tree.txt  fib-simpler.rio  fib.rio  hello.rio  hello.rio.tree.txt  parse-mem.txt  parse.txt  persons.rio  persons2.rio  sample2.c  (+18 more)
(+209 files in other folders)
